# kajiki

./: .travis.yml  CMakeLists.txt  README.md
CMakeModules/: CodeCoverage.cmake
src/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  Document.cpp  Document.h  HTTPServer.cpp  HTTPServer.h  Indexer.cpp  Indexer.h  Searcher.cpp  Searcher.h  Server.cpp  Server.h  Tokenizer.cpp  Tokenizer.h  WikiLoader.cpp  WikiLoader.h  WikiXmlParser.cpp  WikiXmlParser.h  XMLParser.cpp  XMLParser.h  XMLTree.cpp  XMLTree.h  XmlParser.cpp  XmlParser.h  XmlTree.cpp  XmlTree.h  kajiki.cpp  main.cpp
test/: CMakeLists.txt  IndexerTest.cpp  SearcherTest.cpp  Tests.cpp  TokenizerTest.cpp  WikiLoaderTest.cpp  WikiXmlParserTest.cpp  XMLTest.cpp  XmlTest.cpp
test/xml/: test.xml
